[package]
name = "neato_xv11"
version = "0.2.0"
authors = ["Jesus Bamford <jesus.bamford@gmail.com>"]
description = "Neato XV-11 LIDAR for Rust"
homepage = "https://github.com/Jesus805/neato-xv11-rs"
repository = "https://github.com/Jesus805/neato-xv11-rs"
license = "MIT"
readme = "README.md"
keywords = ["lidar", "serial", "neato", "xv-11", "xv11"]
edition = "2018"

[package.metadata.playground]
features = ["serde"]

[dependencies]
serial = "0.4.0"
log = { version = "0.4.11" }
serde = { features = ["derive"], version = "1.0.118" }